# library

./: .gitignore  AGENTS.md  CHANGELOG.cognovis.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  VERSION  capabilities.yaml  consumer-projects.yml  install.sh  justfile  library.yaml  models.yaml  pyproject.toml
.claude/: anatomy.json
cookbook/: add-guardrail.md  add-marketplace.md  add-mcp.md  add.md  audit.md  install.md  list-marketplaces.md  list.md  push.md  remove-guardrail.md  remove.md  search.md  sync.md  use-guardrail.md  use.md
docs/: ARCHITECTURE.md  PRIMITIVES.md  chezmoi-externals.md  consumer-updater.md  dolt-auth-fix.md  harness-baseline.md  lockfile-format.md  managed-worker-stack.md  mcp-migration-rollback.md  project-tooling.md
plans/: CL-yum0.md
prime/: PRIME.md  README.md
scripts/: agent-fleet-audit.py  agents-md-block.py  audit-mcp-migration-debt.py  audit-open-brain-mcp.py  build-agent.py  cdx  cdx-bead-workflow.py  cdx-quick-cursor-dispatch.py  check-coverage.py  check-mcp-migration-debt.sh  compact-bead-context.py  compose-agent.py  coordinator_callback.py  filter-codex-jsonl.py  install-bin.sh  install-hook.py  install-mcp.py  library.py  migrate-lockfile.py  migrate_missing.py  migrate_originals.py  standards-loader.sh  sync_project_tooling.py  update-consumers.py  validate-gascity-export.py  validate-library.py  validate-marketplace-agents.sh  workflow-token-report.py
standards/: agentic-primitives.md
templates/: project-gitignore-harness.txt
tests/: conftest.py  test_agent_builder_registries.py  test_agent_handler_packaging.py  (+82 more)
(+222 files in other folders)
